--- a/fe/src/app/admin/admin.component.html
+++ b/fe/src/app/admin/admin.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+
+<div class="main-content">
+     <app-topbar></app-topbar> 
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi labore, veniam voluptatum nobis et, quae voluptas at quaerat numquam vel, tenetur aspernatur. Illo alias deleniti cupiditate ipsa voluptas incidunt nihil?</p>
+     <router-outlet></router-outlet>
+     <app-footer></app-footer>
+</div>
+
+<app-asidebar></app-asidebar>
