--- a/fe/src/app/admin/admin.component.html
+++ b/fe/src/app/admin/admin.component.html
@@ -1,9 +1,10 @@
 
 <div class="main-content">
-     <app-topbar></app-topbar> 
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi labore, veniam voluptatum nobis et, quae voluptas at quaerat numquam vel, tenetur aspernatur. Illo alias deleniti cupiditate ipsa voluptas incidunt nihil?</p>
-     <router-outlet></router-outlet>
-     <app-footer></app-footer>
+    <app-topbar></app-topbar> 
+    <h1>Bienvenido a su panel de control AdminName!</h1>
+    <router-outlet></router-outlet>
 </div>
+
+<footer><app-footer></app-footer></footer>
 
 <app-asidebar></app-asidebar>
