--- a/fe/src/app/admin/asidebar/asidebar.component.html
+++ b/fe/src/app/admin/asidebar/asidebar.component.html
@@ -17,22 +17,22 @@
     <ul class="sidebar-menu" data-widget="tree">
       <!-- Dashboard -->
       <li class="treeview">
-        <a routerLink="/dashboard">
+        <a routerLink="/admin">
           <i class="fa fa-dashboard"></i> <span>Dashboard</span>
         </a>
       </li>
 
       <!-- Products -->
       <li class="treeview">
-        <a routerLink="/products">
+        <a routerLink="/admin/products">
           <i class="fa fa-shopping-bag"></i> <span>Products</span>
         </a>
       </li>
 
       <!-- Orders -->
       <li class="treeview">
-        <a routerLink="/orders">
-          <i class="fa fa-shopping-cart"></i> <span>Orders</span>
+        <a routerLink="/admin/products/create">
+          <i class="fa fa-shopping-cart"></i> <span>Crear Producto</span>
         </a>
       </li>
 
