--- a/fe/src/app/admin/admin.component.css
+++ b/fe/src/app/admin/admin.component.css
@@ -1,3 +1,20 @@
-.main-content{
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.main-content {
+  min-height: 100%;
   margin-left: 14%;
+  padding-bottom: 60px; /* Altura del footer */
+  box-sizing: border-box;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Altura del footer */
+  background-color: #f5f5f5;
 }
