--- a/fe/src/app/admin/products/products.component.css
+++ b/fe/src/app/admin/products/products.component.css
@@ -1,3 +1,13 @@
+h2{
+  text-align: center;
+}
+
+table{
+  
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .boton {
     display: inline-block;
     padding: 20px 20px;
@@ -6,5 +16,43 @@
     border-radius: 5px;
     text-decoration: none;
     margin: 0px 10px 20px 5px;
+  }
+ 
+  form {
+    width: 400px;
+    margin: 0 auto;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  textarea,
+  input[type="number"] {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    background-color: #ffe6e6;
+    border: 1px solid #ffcccc;
+    border-radius: 5px;
+  }
+  
+  textarea {
+    height: 100px;
+  }
+  
+  button[type="submit"] {
+    background-color: #ff99b3;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #ff6699;
   }
   
