--- a/fe/src/app/default/login/login.component.css
+++ b/fe/src/app/default/login/login.component.css
@@ -1,4 +1,4 @@
-/* Estilos para el contenedor principal */
+
 .container {
   display: flex;
   flex-direction: column;
@@ -13,21 +13,18 @@
   right: 20px;
   background-color: #DD7373;
   padding: 0% 50% 0% 10%;
-  border-radius: 100px; /* Use a border-radius value of 50% for an oval shape */
+  border-radius: 100px;
   font-size: 50px;
   color: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
 
-
-/* Estilos para el logo */
 .logo {
   position: absolute;
   left: 20px;
-  top: calc(50% - 25px); /* Half the height of the logo */
+  top: calc(50% - 25px); 
 }
 
-/* Estilos para el formulario */
 .form {
   width: 300px;
   margin: 0 auto;
@@ -37,7 +34,6 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
 
-/* Estilos para los campos de entrada y los labels */
 .form input,
 .form label {
   display: block;
@@ -46,17 +42,14 @@
   margin-bottom: 10px;
 }
 
-/* Estilos para el enlace de registro */
 .form a {
   text-align: left;
 }
 
-/* Estilos para el botón de login */
 .form button {
   align-self: flex-end;
 }
 
-/* Estilos para el pie del formulario */
 .form-footer {
   display: flex;
   justify-content: space-between;
