--- a/fe/src/app/default/login/login.component.html
+++ b/fe/src/app/default/login/login.component.html
@@ -16,7 +16,7 @@
           <input type="password" id="password" name="password" [(ngModel)]="password" required>
         </div>
         <div class="form-footer">
-          <a routerLink="/registro">Regístrate</a>
+          <a routerLink="/register">Regístrate</a>
           <button type="submit">Login</button>
         </div>
       </form>
